# Wink-V2

./: REAdME.md  package.json
Backend/: config.py  pyproject.toml  render.yaml  requirements.txt  run.py  seed.py  seed_profiles.py
Backend/app/: __init__.py  models.py
Backend/app/routes/: __init__.py  auth.py  chat.py  profile.py  swipe.py
Backend/app/services/: auth_service.py  chat_service.py  profile_service.py  swipe_service.py
Backend/instance/: wink.db
Backend/migrations/versions/: 0eb905fd3e74_initial_migration.py  a23d87fd9a3e_initial_migration.py
Frontend/: package-lock.json  package.json
Frontend/src/: App.css  App.tsx  index.css  type.ts
Frontend/src/Pages/: Bridge.tsx  Button.tsx  Chat.tsx  Home.tsx  Loading.tsx  Login.tsx  Payment.tsx  Profile.tsx  Settings.tsx  Sidebar.tsx  Swipe.tsx
Frontend/src/Styles/: Bridge.css  Button.css  Chat.css  Home.css  Loading.css  Login.css  Payment.css  Profile.css  Settings.css  Sidebar.css  Swipe.css
