[tool.poetry]
name = "wink-v2-backend"
version = "0.1.0"
description = "Backend for Wink V2"
authors = ["victor.dmaina@gmail.com"]

[tool.poetry.dependencies]
python = "^3.11"
flask = "^2.1.2"
gunicorn = "^20.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
